Fix width on mobile devices

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 html {
   background-color: #000408;
   color: rgb(240, 239, 230);
+  width: 100%;
 }
 body {
   margin: 0;
